crates/fcp-oauth/tests/snapshots/golden_snapshots__oauth1_authorization_url_shape.snap
---
source: crates/fcp-oauth/tests/golden_snapshots.rs
expression: normalize_authorization_url(&url)
---
https://a.com/authorize
  oauth_token = req-token-123
