crates/fcp-oauth/tests/snapshots/golden_snapshots__oauth2_authorization_url_basic_shape.snap
---
source: crates/fcp-oauth/tests/golden_snapshots.rs
expression: normalize_authorization_url(&url)
---
https://auth.ex.com/authorize
  client_id = my-client
  redirect_uri = https://localhost/cb
  response_type = code
  scope = read write
  state = <RANDOM>
