crates/fcp-oauth/tests/snapshots/golden_snapshots__refresh_request_basic_auth.snap
---
source: crates/fcp-oauth/tests/golden_snapshots.rs
expression: body
---
grant_type=refresh_token&refresh_token=rt_abc123
