crates/fcp-oauth/tests/snapshots/golden_snapshots__refresh_request_post_credentials.snap
---
source: crates/fcp-oauth/tests/golden_snapshots.rs
expression: body
---
client_id=client-id-42&client_secret=secret-with%2Fspecial%2Bchars%3Dyes&grant_type=refresh_token&refresh_token=rt_xyz789
